# relu_optimal_sets

./: .gitignore  README.md  pyproject.toml  setup.sh
scripts/: make_figure_1.py  make_figure_2.py  make_figure_3.py  make_figure_7.py  make_table_1.py
src/solfns/: datasets.py  pruning.py  tuning.py  utils.py
tables/: table_1.csv  table_2.csv
